fix: retain Fabric metadata custom values